# Raspberry_Pi_Remote_Command_Execution_and_File_Transfer

./: CMakeLists.txt  CMakeUserPresets.json  HostComputer.rc  Host_Computer.cpp  Host_Computer.h  Host_Computer.ui  README.md  TcpClientHandler.cpp  TcpClientHandler.h  main.cpp  raspi_Client.py
